feat : Main.yml 스크립트 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
           script: |
             whoami
             ls -al
-            cd publish/
-            ./pull_repository.sh
+            cd Mudig_BE/
+            /home/ubuntu/publish/pull_repository.sh
