--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
+        DJAGNO_SECRET: ${{ secrets.DJAGNO_SECRET }}
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
