--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,17 @@ on:
 jobs:
   CI:
     runs-on: ubuntu-latest
+    env:
+        DJAGNO_SECRET: ${{ secrets.DJAGNO_SECRET }}
     strategy:
       max-parallel: 4
       matrix:
         python-version: ['3.10']
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
-        DJAGNO_SECRET: ${{ secrets.DJAGNO_SECRET }}
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
