fix : 배포 메시지 디스코드 연동 에러 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
     env:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
     uses: Ilshidur/action-discord@master
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: success()
     with:
       format: markdown
       message: |
@@ -78,7 +78,7 @@ jobs:
     env:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
     uses: Ilshidur/action-discord@master
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    if: failure()
     with:
       format: markdown
       message: |
