--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,33 +59,35 @@ jobs:
     name: Send Build Success Message
     env:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-    uses: Ilshidur/action-discord@master
     if: success()
-    with:
-      format: markdown
-      message: |
-        Author: ${{github.actor}}
-        
-        Status: 😚 **Success**
-        
-        Commit message: ${{ github.event.commits[0].message }}
-        
-        [See changes](https://github.com/${{ github.repository }}/commit/${{github.sha}}) 
+    steps:
+    - uses: Ilshidur/action-discord@master
+    - with:
+        format: markdown
+        message: |
+          Author: ${{github.actor}}
+          
+          Status: 😚 **Success**
+          
+          Commit message: ${{ github.event.commits[0].message }}
+          
+          [See changes](https://github.com/${{ github.repository }}/commit/${{github.sha}}) 
 
   # 빌드 실패 메세지 발송
   build-failure:
     name: Send Build failure Message
     env:
       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-    uses: Ilshidur/action-discord@master
     if: failure()
-    with:
-      format: markdown
-      message: |
-        Author: ${{github.actor}}
-        
-        Status: 😱 **Failure**
-        
-        Commit message: ${{ github.event.commits[0].message }}
-        
-        [link](https://github.com/${{ github.repository }}/actions)
+    steps:
+    - uses: Ilshidur/action-discord@master
+    - with:
+        format: markdown
+        message: |
+          Author: ${{github.actor}}
+          
+          Status: 😱 **Failure**
+          
+          Commit message: ${{ github.event.commits[0].message }}
+          
+          [link](https://github.com/${{ github.repository }}/actions)
