--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
+    if: success()
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: executing remote ssh commands using password
