--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,43 +30,11 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
-    
-    - name: CI Success
-      if: success()
-      runs-on: ubuntu-latest
-      steps:
-      - name: Discord notification
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: '            
-            ✅ Status: 😚 **CI Success**
-            
-            ✍️ Commit message: ${{ github.event.commits[0].message }}'
-    
-    - name: CI failure
-      if: failure()
-      runs-on: ubuntu-latest
-      steps:
-      - name: Discord notification
-        env:
-          DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-        uses: Ilshidur/action-discord@master
-        with:
-          args: '          
-            ✅ Status: 😭 **CI failure**
-            
-            ✍️ Commit message: ${{ github.event.commits[0].message }}
-            
-            ⛔ Error message : ${{ job.outcome }}'
-
-
 
   # This workflow contains a single job called "build"
-  build:
+  deploy:
     needs: CI
-    name: Build
+    name: Deploy
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
@@ -88,78 +56,77 @@ jobs:
             cd Mudig_BE/
             /home/ubuntu/publish/pull_repository.sh
 
-  # # CI 성공 메세지 발송
-  # build-CI-Success:
-  #   needs: CI
-  #   runs-on: ubuntu-latest
-  #   if: success()
-  #   steps:
-  #   - name: Discord notification
-  #     env:
-  #       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-  #     uses: Ilshidur/action-discord@master
-  #     with:
-  #       args: 'Author: ${{github.actor}}
-          
-  #         Status: 😚 **CI Success**
-          
-  #         Commit message: ${{ github.event.commits[0].message }}'
+  # CI 성공 메세지 발송
+  build-CI-Success:
+    needs: CI
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: '
+            ✅ Status: 😚 **CI Success**
+            
+            ✍️ Commit message: ${{ github.event.commits[0].message }}'
 
-  # # 배포 성공 메세지 발송
-  # build-Deploy-Success:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   if: success()
-  #   steps:
-  #   - name: Discord notification
-  #     env:
-  #       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-  #     uses: Ilshidur/action-discord@master
-  #     with:
-  #       args: 'Author: ${{github.actor}}
+  # 배포 성공 메세지 발송
+  build-Deploy-Success:
+    needs: deploy
+    runs-on: ubuntu-latest
+    if: success()
+    steps:
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: '
+          ✅ Status: 😚 **Deploy Success**
+            
+          ✍️ Commit message: ${{ github.event.commits[0].message }}
           
-  #         Status: 😚 **Deploy Success**
-          
-  #         Commit message: ${{ github.event.commits[0].message }}
-          
-  #         [See changes](https://github.com/${{ github.repository }}/commit/${{github.sha}}) '
+          [🫡 See changes](https://github.com/MusicDigging/Mudig_BE/actions)'
 
-  # # CI 실패 메세지 발송
-  # build-CI-failure:
-  #   needs: CI
-  #   runs-on: ubuntu-latest
-  #   if: failure()
-  #   steps:
-  #   - name: Discord notification
-  #     env:
-  #       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-  #     uses: Ilshidur/action-discord@master
-  #     with:
-  #       args: 'Author: ${{github.actor}}
+  # CI 실패 메세지 발송
+  build-CI-failure:
+    needs: CI
+    runs-on: ubuntu-latest
+    if: failure()
+    steps:
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: '          
+          ✅ Status: 😭 **CI failure**
           
-  #         Status: 😭 **CI failure**
+          ✍️ Commit message: ${{ github.event.commits[0].message }}
           
-  #         Commit message: ${{ github.event.commits[0].message }}
-          
-  #         outcome : ${{ job.outcome }}
+          ⛔ Error message : ${{ CI.outputs }}
 
-  #         [See changes](https://github.com/${{ github.repository }}/commit/${{github.sha}}) '
+          [🫡 See changes](https://github.com/MusicDigging/Mudig_BE/actions)'
 
-  # 배포 실패 메세지 발송
-  # build-Deploy-failure:
-  #   needs: build
-  #   runs-on: ubuntu-latest
-  #   if: failure()
-  #   steps:
-  #   - name: Discord notification
-  #     env:
-  #       DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-  #     uses: Ilshidur/action-discord@master
-  #     with:
-  #       args: 'Author: ${{github.actor}}
+  #배포 실패 메세지 발송
+  build-Deploy-failure:
+    needs: build
+    runs-on: ubuntu-latest
+    if: ${{ build.outcome }} == 'failure'
+    steps:
+    - name: Discord notification
+      env:
+        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+      uses: Ilshidur/action-discord@master
+      with:
+        args: 'Author: ${{github.actor}}
           
-  #         Status: 😭 **Deploy failure**
+          ✅ Status: 😭 **Deploy failure**
           
-  #         Commit message: ${{ github.event.commits[0].message }}
+          ✍️ Commit message: ${{ github.event.commits[0].message }}
+
+          ⛔ Error message : ${{ deploy.outputs }}
           
-  #         [See changes](https://github.com/${{ github.repository }}/commit/${{github.sha}}) '
+          [🫡 See changes](https://github.com/MusicDigging/Mudig_BE/actions)'
