--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,7 @@ jobs:
   deploy:
     needs: CI
     name: Deploy
+    id: deploy
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     
